# mpl_fig_viewer

./: README.md  custom_button.py  mpl_fig_viewer.py  palette.py  pyproject.toml  setup.py
assets/: blank.pkl
