[project]
name = "mpl-fig-viewer"
version = "0.1.0"
description = "GUI for viewing interactive Matplotlib .eplot/.pkl files"
authors = [
    {name = "Henry Pickersgill",email = "htap2@live.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "matplotlib>=3.11.0",
    "PySide6>=6.11.1",
    "cx_Freeze>=8.6.4",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
